--- a/src/pages/Menu/ProductItem/ProductItem.module.scss
+++ b/src/pages/Menu/ProductItem/ProductItem.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1 1;
+    height: 70vh;
 }
 
 .menu-products-layout {
